Edited wiki page Ewy through web user interface.

--- a/wiki/Ewy.wiki
+++ b/wiki/Ewy.wiki
@@ -2,10 +2,11 @@ Why Ewy is awesome
 
 = Introduction =
 
-this article will discuss the awesomeness of team member ewy
+this article will outline the awesomeness of team member ewy. he doesn't afraid of anything...
 
 
 = Details =
 
-1. He doesn't afraid of anything!
-2. 
+Guitar collection
+
+Ewy has a substantial guitar collection, and a guitar keyring... he is currently building a separate wing to his house to house them in. 
