--- a/wiki/Gordon.wiki
+++ b/wiki/Gordon.wiki
@@ -12,7 +12,7 @@ In 1992, a young Gordon was gifted his first computer, and by 2005 was able to i
 
 Growing up in rural Wales, Gordon was a fanatical child. His family were forced out of the sleepy hamlet of llgdhjfdahkjas after the young boy had won 17 squirrel duels, and drank the nearby reservoir dry within 3 hours (and a bit) one sleepy Summers eve. 
 
-With their volatile child, age 11, the Martins migrated (bird joke) south towards Plymouth. However due to a lack of Wine gums for the journey, the AA map was consumed before a Little Chef was reached and the Martins ended up in Irvine, Scotland (see: a map). In was in Scotland that the young Gordon developed many of the skills which proved essential during the latter stages of his formative years. Ice Skating, Extreme ATV riding and "Level 6 Assault Rifle" were all attained before age 13. Progress was hampered when, at age 15, Gordons' save file was corrupted. 
+With their volatile child, age 11, the Martins migrated (bird joke) south towards Plymouth. However due to a lack of Wine gums for the journey, the AA map was consumed before a Little Chef was reached and the Martins ended up in Irvine, Scotland (see: a map). It was in Scotland that the young Gordon developed many of the skills which proved essential during the latter stages of his formative years. Ice Skating, Extreme ATV riding and "Level 6 Assault Rifle" were all attained before age 13. Progress was hampered when, at age 15, Gordons' save file was corrupted. 
 
 After much consideration, a more realistic skill set was envisioned by his local Chaplin. The fruits of this labour can be seen today as Gordon is working towards "Level 3 Badminton", and regularly backs up his saves. 
 
