Edited wiki page Gordon through web user interface.

--- a/wiki/Gordon.wiki
+++ b/wiki/Gordon.wiki
@@ -3,10 +3,9 @@
 
 = Introduction =
 
-Gordon Hugh Martin was born in 1990 in a Scottish Hospital, probablly.
-
-In 1992, a young Gordon was gifted his first computer, and by 2005 was able to install, excecte and use a veriety of programs, including Microsoft Word, Microsoft Publisher, Microsoft Excel and Microsoft Power Point.
-
+Gordon Hugh Martin was born in 1990 in a Scottish Hospital, probably.
+ 
+In 1992, a young Gordon was gifted his first computer, and by 2005 was able to install, execute and use a variety of programs, including Microsoft Word, Microsoft Publisher, Microsoft Excel and Microsoft Power Point. 
 
 = Details =
 
