Added whats on Google docs (Heather's and Gordon's). Added requirmements section.

--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -1,9 +1,11 @@
 \documentclass{l3proj}
 \begin{document}
-\title{GIM}
-\author{People \\
-People}
-\date{21 Feburary 2011}
+\title{GIM - Team G Instant Messenger}
+\author{Ewan Baird \\
+Heather Hoaglund-Biron \\
+Gordon Martin \\
+James McMinn}
+\date{28 March 20111}
 \maketitle
 \begin{abstract}
 
