--- a/TP3/dissertation/Design/design.tex
+++ b/TP3/dissertation/Design/design.tex
@@ -1,10 +1,10 @@
 \chapter{Design}
 \label{design}
 
-\input{chapter3/protocol.tex}
+\input{Design/protocol.tex}
 
-\input{chapter3/client.tex}
+\input{Design/client.tex}
 
-\input{chapter3/server.tex}
+\input{Design/server.tex}
 
-\input{chapter3/networking.tex}
+\input{Design/networking.tex}
