--- a/TP3/dissertation/Evaluation/evaluation.tex
+++ b/TP3/dissertation/Evaluation/evaluation.tex
@@ -1,8 +1,8 @@
 \chapter{Evaluation}
 \label{evaluation}
 
-\input{chapter5/server.tex}
+\input{Evaluation/server.tex}
 
-\input{chapter5/client.tex}
+\input{Evaluation/client.tex}
 
-\input{chapter5/user.tex}
+\input{Evaluation/user.tex}
