--- a/TP3/dissertation/Implementation/implementation.tex
+++ b/TP3/dissertation/Implementation/implementation.tex
@@ -1,10 +1,10 @@
 \chapter{Implementation}
 \label{implementation}
 
-\input{chapter4/client.tex}
+\input{Implementation/client.tex}
 
-\input{chapter4/server.tex}
+\input{Implementation/server.tex}
 
-\input{chapter4/communication.tex}
+\input{Implementation/communication.tex}
 
-\input{chapter4/storage.tex}
+\input{Implementation/storage.tex}
