--- a/TP3/dissertation/Introduction/introduction.tex
+++ b/TP3/dissertation/Introduction/introduction.tex
@@ -1,8 +1,4 @@
 \chapter{Introduction}
 \label{introduction}
 
-\input{chapter1/intro.tex}
-
-\input{chapter1/problem_definition.tex}
-
-\input{chapter1/requirements.tex}
+\input{Introduction/intro.tex}
