--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -15,17 +15,17 @@ The abstract goes here
 \educationalconsent
 \tableofcontents
 
-\input{chapter1/introduction.tex}
+\input{Introduction/introduction.tex}
 
-\input{chapter2/requirements.tex}
+\input{Requirements/requirements.tex}
 
-\input{chapter3/design.tex}
+\input{Design/design.tex}
 
-\input{chapter4/implementation.tex}
+\input{Implementation/implementation.tex}
 
-\input{chapter5/evaluation.tex}
+\input{Evaluation/evaluation.tex}
 
-\input{chapter6/conclusion.tex}
+\input{Conclusion/conclusion.tex}
 
 \input{appendix/appendix}
 
