--- a/TP3/dissertation/Conclusion/conclusion.tex
+++ b/TP3/dissertation/Conclusion/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion}
 \label{conclusion}
 
-\input{chapter5/contributions.tex}
+\input{Conclusion/contributions.tex}
 
-\input{chapter5/reflective.tex}
+\input{Conclusion/reflective.tex}
