--- a/TP3/dissertation/Requirements/problem_definition.tex
+++ b/TP3/dissertation/Requirements/problem_definition.tex
@@ -13,5 +13,5 @@ Despite the fact the above problem definition says we have to develop the client
 
 The problem definition also states that we should at least have text-based messages, statuses (online, offline, etc), and usernames. We decided to expand on this, including emoticons (small pictures that depict emotions) in messages, a personal message and display picture for each user, and more.
 
-It wasn't explicitly stated, but we had to decide how to structure the users: whether they should have ``friends'' or ``contacts,'' whether it should be chatroom-style, and whether there should be one-on-one conversations, group conversations, or both. We chose to do a combination, in that users may have contacts and one-on-one conversations, but may also join, create, and invite other users to group chatrooms.
+It wasn't explicitly stated, but we had to decide how to structure the users: whether they should have ``friends'' or ``contacts,'' whether it should be chatroom-style, and whether there should be one-on-one conversations, group conversations, or both. We chose to do a combination, in that users may have contacts and one-on-one conversations, but may also join, create, and invite other users to group chatrooms. %WHY?
 
