Footnotes/Links in Intro and Requirements added.

--- a/TP3/dissertation/Introduction/intro.tex
+++ b/TP3/dissertation/Introduction/intro.tex
@@ -2,7 +2,7 @@
 
 Instant messengers are an easy, fast way to communicate over the Internet. Basic instant messengers allow users to type messages to each other on separate computers and have those messages immediately show on the screen, like instant email. More advanced systems have features like audio and video communication. These days instant messengers are becoming more popular, given the way the Internet is helping people from all over the world connect with one another. This has led to an increased demand for quick and easy communication.
 
-These days, it's difficult to be original when developing an instant messenger. Programs like Skype, AIM and MSN Messenger are popular, especially with the younger generation. There are many kinds of instant messengers out there, the most prominent of which are always competing against each other to have the newest and most intriguing features.
+These days, it's difficult to be original when developing an instant messenger. Programs like Skype\footnote{\texttt{http://www.skype.com/}}, AIM\footnote{\texttt{http://www.aim.com/}} and Windows Live Messenger\footnote{\texttt{http://explore.live.com/}} are popular, especially with the younger generation. There are many kinds of instant messengers out there, the most prominent of which are always competing against each other to have the newest and most intriguing features.
 
 This project is not about joining that competition. Instead, we are using this opportunity to explore what it's like to create an instant messenger from the ground up. As we are part of the younger generation, we use instant messengers almost daily, and it's interesting to be able to go behind the scenes and discover how they work for ourselves.
 
