--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -2,11 +2,11 @@
 
 \subsection{Overview}
 
-This section will analyse how appropriate our client design (outlined in the design section****Make this into a footnote??****) was for the purpose of achieving the aims outlined in the client section (***which section is this? link?***). Some of our design choices worked well to achieve our aims, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of java to implement chat windows, which ended up reducing the problem of internal routing of messages to the correct windows. These aspects will be discussed in the 'Design' section (***this is confusing since there is a Design chapter. change name of subsection?***).
+This section will analyse how appropriate our client design  was for the purpose of achieving the aims outlined in the client section.\footnote{See section x.y for a detailed discussion}  Some of our design choices worked well to achieve our aims, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of java to implement chat windows, which ended up reducing the problem of internal routing of messages to the correct windows. These aspects will be discussed in the 'Design Changes' section.
 
-While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the 'Design' section (***again, same note as above***). In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be ill informed. This required design work reaching over the protocol, and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of our success of our changes will be discussed in the 'Collaboration' section. Furthermore, as we became more familiar with the swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The 'Evolution of Code' section will discuss problems we identified with code, which was functional,  but deemed to be hard to maintain on reviewing our code, such as in the above case case, and the merits of our changes we made. 
+While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the 'Design' Changes section. In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be ill informed. This required design work reaching over the protocol, and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of our success of our changes will be discussed in the 'Collaboration' section. Furthermore, as we became more familiar with the swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The 'Evolution of Code' section will discuss problems we identified with code, which was functional,  but deemed to be hard to maintain on reviewing our code, such as in the above case case, and the merits of our changes we made. 
 
-\subsection{Design}
+\subsection{Design Changes}
 
 \subsection{Collaboration}
 
