--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -10,4 +10,7 @@ While implementing the client, it became clear that some of our larger design ch
 
 \subsection{Collaboration}
 
+The first draft of the GIM protocol considered all conversations as 'rooms', and did not distinguish group chats and personal chats.\footnote{internal reference to protocol section} In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitely implementing features that the internal workings of the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's "USER" argument in the "ROOM" command would be sufficient to count the amount of users in the "room" and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be 1, and thus the wrong room could be created. As a result, the protocol engineer had to be consulted to make changes to the protocol, and the client ammended to reflect these changes. 
+
+
 \subsection{Evolution of Code}
