--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -8,6 +8,8 @@ While implementing the client, it became clear that some of our larger design ch
 
 \subsection{Design Changes}
 
+
+
 \subsection{Collaboration}
 
 The first draft of the GIM protocol treated all conversations as 'rooms', and did not distinguish group chats and personal chats.\footnote{internal reference to protocol section} In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitely implementing features in the protcol that the internal workings of the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's "USER" argument in the "ROOM" command would be sufficient to count the amount of users in the "room" and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be 1, and thus the wrong chat window could be created. As a result, the protocol engineer had to be consulted to make changes to the protocol, and the client ammended to reflect these changes. 
@@ -16,17 +18,23 @@ This change was a test of the boundary of responsibilites within our client stru
 
 Creation:
 \begin{enumerate}
-\item 
+\item Client adds a type of the room to be created to the new room queue in the model.
+\item Client notes a list of user(s) invited to chat in the invitations queue in the model.
+\item Client sends request to server to create a room of this type.
+\item Server responds with 'created' with the room id.
+\item Client matches the type of chat with the 'new room' queue, and the user list from the 'invitations queue.'
+\item Client spawns, or updates existing window in the window list with the room id to send messages to, and the user(s) in the chat.
 
 Invitation:
-
 \begin{enumerate}
-\item Client receives invite to chat from server on certain room id from user. [Store username in a queue]  
+\item Client receives invite to chat from server on certain room id from user. Store username in a "invited" queue in model.  
 \item Client asks server the type of the room that it has been invited to. 
 \item Server responds with 'Personal' or 'Group'
-\item Client matches request with response from the queue
-\item Client spawns the appropriate chat window, or updates the internal state information of an existing window with the new roomid. Information includes who is in the room, and the id to send messages to.
+\item Client matches request with response from the "invited" queue.
+\item Client spawns the appropriate chat window, or updates the internal state information of an existing window with the new roomid in the window list. Information includes who is in the room, and the id to send messages to.
 \item If it is a group chat, client asks server for the user list in the room
+
+
 
 
 
