--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -14,7 +14,7 @@ While implementing the client, it became clear that some of our larger design ch
 
 The first draft of the GIM protocol treated all conversations as 'rooms', and did not distinguish group chats and personal chats.\footnote{internal reference to protocol section} In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitely implementing features in the protcol that the internal workings of the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's "USER" argument in the "ROOM" command would be sufficient to count the amount of users in the "room" and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be 1, and thus the wrong chat window could be created. As a result, the protocol engineer had to be consulted to make changes to the protocol, and the client ammended to reflect these changes. 
 
-This change was a test of the boundary of responsibilites within our client structure, as it effected communication with the server, and the back end of the client. The protocol engineer's solution to the issue was to add a 'type' argument to the room command. In the case creating a room, the type now had to be specified. To allow a user to work out what room type a chat had, the 'type' argument would be used, with a room identifier. This kept the protocol abstract, as some conceivable implementations of the protocol may not be interested in this. In order to deal with these changes, our client had to be designed to sequence responses from the server with certain requests. As the protocol did not include sequence numbers, we had to re-design the model to perform this task. In retrospect, this may demonstrate a weakness within the protocol. It was apparent that the amount of "talk" between the client and server to achieve the goal of starting a chat was now more complex, which required an understanding of what needed to be stored at each stage. This high level plan was determined:
+This change was a test of the boundary of responsibilites within our client structure, as it effected communication with the server, and the back end of the client. The protocol engineer's solution to the issue was to add a 'type' argument to the room command. In the case creating a room, the type now had to be specified. To allow a user to work out what room type a chat had, the 'type' argument would be used, with a room identifier. This kept the protocol abstract, as some conceivable implementations of the protocol may not be interested in this. In order to deal with these changes, our client had to be designed to sequence responses from the server with certain requests. As the protocol did not include sequence numbers, we had to re-design the model to perform this task. It was apparent that the amount of "talk" between the client and server to achieve the goal of starting a chat was now more complex, which required an understanding of what needed to be stored at each stage. This high level plan was determined:
 
 Creation:
 \begin{enumerate}
@@ -34,6 +34,7 @@ Invitation:
 \item Client spawns the appropriate chat window, or updates the internal state information of an existing window with the new roomid in the window list. Information includes who is in the room, and the id to send messages to.
 \item If it is a group chat, client asks server for the user list in the room
 
+In retrospect, our trade off between keeping an abstract protocol may have been too high. Aside from this communication between the client and the server, there are complexities within the client code to ensure these 
 
 
 
