--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -37,10 +37,6 @@ Invitation:
 \item If it is a group chat, client asks server for the user list in the room
 \end{enumerate}
 
-In retrospect, our trade off between keeping an abstract protocol may have been too high. Aside from this communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7. This meant that safegaurds had to be considered during these sequence of events to ensure messages were not dropped, while ensuring the user did not have to 'wait' for the other user to enter the room, before entering a message. This motivated the need for a boolean value indicating whether the chat participant was in the room, internal to chat windows. While this value was false, messages are buffered to be sent when it turned to 'true.' A further issue of synchronicity was internal to the code. As the GUI was running on a seperate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updating in step 6. In fact, this was an issue that was a subtle issue that was not recognised until late in development, and we struggled to identify. In retrospect, part of our problem was not identifying where the swing event queue needed to be used (as outlined in the previous section), compounded by a complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required from threading 
-
-
-
-
+In retrospect, our trade off between keeping an abstract protocol may have been too high. Aside from this communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7. This meant that safegaurds had to be considered during these sequence of events to ensure messages were not dropped, while ensuring the user did not have to 'wait' for the other user to enter the room, before entering a message. This motivated the need for a boolean value indicating whether the chat participant was in the room, internal to chat windows. While this value was false, messages are buffered to be sent when it turned to 'true.' A further issue of synchronicity was internal to the code. As the GUI was running on a seperate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updating in step 6. In fact, this was an issue that was a subtle issue that was not recognised until late in development, and we struggled to identify. In retrospect, part of our problem was not identifying where the swing event queue needed to be used (as outlined in the previous section), compounded by a complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required from threading. 
 
 \subsection{Evolution of Code}
