Made a small start on UI design

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -54,9 +54,14 @@ We anticipated this would be advantageous as it would reduce the repetition of c
 
 
 
-\subsubsection{}
+\subsection{Design of GUI}
 
+As we had decided to incorperate both group and one-to-one chats, this provided a wide scope in terms of interface design. We had the option to base our interface on either IRC or MSN style clients, or to create something entirely of our own. MSN was ultimately selected as the basis of the GUI for a number of reasons; primarily we belived that it was better suited to our feature set. An IRC style interface would require a considerable redesign to accomidate features such as display pictures, contact lists, and offline messaging. While creating our own style of IM interface would be interesting, it would likely lead to an inferior design, and be more time consuming to create. MSN style programs typically integrate the vast majority, if not all, of our MoSCoW feature set, and was therefore chosen as our starting point.
+ 
+After we had decided on the basic form of the interface, we created use cases for the client interactions. As all users have equal rights within the application we did not deem it nesecary to produce diagram representations.
 
+\subsubsection{Example Use Cases}
 
+The following are examples of key use cases:
 
 
